[tool.poetry]
name = "illiterate"
version = "0.4.1"
description = "Unobtrusive literate programming experience for Python pragmatists"
authors = ["Alejandro Piad <alepiad@gmail.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.scripts]
illiterate = "illiterate.cli:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
rich = "^9.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
mkdocs = "^1.1"
coverage = "^5.0.3"
black = "^19.10b0"
mkdocs-material = "^5.5.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
