[tool.poetry]
name = "illiterate"
version = "1.00"
description = "Yet another literate programming preprocessor"
authors = ["Alejandro Piad-Morffis <apiad@apiad.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
